🔧 Mise à jour de la configuration CORS dans CorsConfig.java pour spécifier des origines exactes, permettant ainsi l'utilisation de `allowCredentials(true)`. Ajustement des règles de sécurité dans SecurityConfig.java pour intégrer l'annotation `@EnableMethodSecurity` et affiner les autorisations d'accès aux API. Suppression de WebConfig.java pour centraliser la configuration CORS.