@@ -7,7 +7,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
+
 
 @Configuration
 public class CorsConfig {
@@ -16,33 +16,37 @@ public class CorsConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Autoriser TOUTES les origines (approche plus permissive)
-        configuration.setAllowedOriginPatterns(List.of("*"));
+        // SOLUTION A : Spécifier les origines exactes pour permettre allowCredentials(true)
+        configuration.setAllowedOrigins(Arrays.asList(
+           
+            "http://localhost:4200",    // Angular dev server
+       
+            "https://todoappnhat.netlify.app"  // IMPORTANT: pas de slash à la fin!
+        ));
+   
         
-        // Autoriser ces méthodes HTTP
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+        ));
         
-        // Autoriser ces en-têtes
         configuration.setAllowedHeaders(Arrays.asList(
             "Authorization", 
             "Content-Type", 
             "X-Requested-With", 
             "Accept", 
-            "Origin", 
+            "Origin",
             "Access-Control-Request-Method", 
             "Access-Control-Request-Headers"
         ));
         
-        // Autoriser les cookies et les en-têtes d'authentification
+        // Autoriser les credentials (cookies, tokens)
         configuration.setAllowCredentials(true);
         
-        // Exposer ces en-têtes aux clients
         configuration.setExposedHeaders(Arrays.asList(
             "Access-Control-Allow-Origin", 
             "Access-Control-Allow-Credentials"
         ));
         
-        // Mettre en cache la prévalidation CORS pendant 1 heure
         configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -50,4 +54,4 @@ public class CorsConfig {
         
         return source;
     }
-} 
+}
